--- a/src/CloudChatApp/Components/Account/Shared/ExternalLoginPicker.razor
+++ b/src/CloudChatApp/Components/Account/Shared/ExternalLoginPicker.razor
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
 @using CloudChatApp.Data
+@using CloudChatApp.Data.Entities
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject IdentityRedirectManager RedirectManager
