--- a/src/CloudChatApp/Components/Account/Shared/ManageNavMenu.razor
+++ b/src/CloudChatApp/Components/Account/Shared/ManageNavMenu.razor
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using CloudChatApp.Data
+@using CloudChatApp.Data.Entities
 
 @inject SignInManager<ApplicationUser> SignInManager
 
